--- a/cabicons.html
+++ b/cabicons.html
@@ -402,7 +402,7 @@
                     <!-- Member 3 -->
                     <div class="bg-white p-6 rounded-xl shadow-md text-center">
                         <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-blue-100">
-                            <img src="Claudyce.jpg" alt="Team member" class="w-full h-full object-cover">
+                            <img src="Toi.jpg" alt="Team member" class="w-full h-full object-cover">
                         </div>
                         <h4 class="text-xl font-bold text-blue-800 mb-2">SALABANZI Claudyce Corneille</h4>
                         <p class="text-blue-600 font-medium mb-2">ATTACHÉE  TECHNIQUE</p>
